# Z-Mobile-manip

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
configs/: d435i.service  ffs-ir-throttle.service  ffs_d435_calibration.json  foxglove-bridge-read-only.service  foxglove_read_only.yaml  go2w-posture-intent-live.env  go2w-reactive-live.env  go2w_piper.json  nuc-control-init.py  nuc-kinematics-init.py  piper_collision_capsules.json  piper_home.example.json  piper_mount_anchor.example.json  piper_wrist_camera_calibration.example.json  rosbag_sensor_qos.yaml  z-manip-go2w-base-control.service  z-manip-local-grounding.service  z-manip-piper-passive-feedback.service  z-manip-planning-workbench.service  z-manip-runtime-observer.service  z-mobile-manip-go2w-posture-intent-live.service  z-mobile-manip-go2w-posture-intent-shadow.service  z-mobile-manip-go2w-reactive-live.service  z-mobile-manip-go2w-reactive-shadow.service  z-mobile-manip-piper-reactive-view.service
docker/: README.md
docker/anygrasp_runtime/: Dockerfile  README.md  healthcheck.py  server.py
docker/edgetam_service/: Dockerfile  README.md  requirements.txt  server.py
docker/ffs_service/: Dockerfile  ffs_depth_service.py  requirements.txt
docker/runtime/: Dockerfile  Dockerfile.dockerignore  README.md  compose.yaml  cyclonedds-go2w-pc.xml  entrypoint.sh  smoke.sh
docker/whole_body_runtime/: Dockerfile
docker/yoloe_service/: .dockerignore  Dockerfile  requirements.txt
docs/: all_ik_retry_disposition_benchmark_2026-07-22.md  component_manager.md  configuration.md  go2w_piper_operations.md  go2w_posture_adapter.md  go2w_reactive_runtime.md  handoff_stage_budget_2026-07-22.md  mobile-manipulation-acceptance.md  offline_end_to_end_acceptance_2026-07-23.md  offline_grounding_seed_benchmark_2026-07-23.md  offline_perception_bag_benchmark_2026-07-22.md  perception_stage_budget_2026-07-23.md  performance_benchmark_2026-07-22.md  persistent_ik_warm_start_benchmark_2026-07-22.md  piper_mount_and_kinematic_calibration.md  plan.md  staged_pick_hold_contract.md  strict_all_ik_replay_evidence_2026-07-23.md  vlm_benchmark_2026-07-10.md  whole_body_shadow_controller.md
patches/: .gitkeep
ros2/z_manip_edgetam/: README.md  package.xml  setup.cfg  setup.py
ros2/z_manip_motion/: README.md  package.xml  setup.cfg  setup.py
ros2/z_manip_motion/config/: joint_limits.yaml  kinematics.yaml  kinematics_trac_ik.yaml  ompl_planning.yaml  piper.srdf  sensors_3d_depth.yaml  sensors_3d_pointcloud.yaml
ros2/z_manip_motion/launch/: moveit_planning.launch.py
ros2/z_manip_motion/resource/: z_manip_motion
ros2/z_manip_motion/test/: test_motion_contracts.py  test_moveit_config.py  test_robot_state.py
ros2/z_manip_motion/z_manip_motion/: __init__.py  contracts.py  joint_state_assembler.py  moveit_config.py  moveit_plan_bridge.py  robot_state.py
ros2/z_manip_navigation/: README.md  package.xml  setup.cfg  setup.py
ros2/z_manip_place/: README.md  package.xml  setup.cfg  setup.py
ros2/z_manip_rgbd_bridge/: CMakeLists.txt  package.xml
ros2/z_manip_rgbd_bridge/src/: nonlazy_rgbd_bridge.cpp
ros2/z_manip_ros/: README.md  package.xml  setup.cfg  setup.py
ros2/z_manip_task/: README.md  package.xml  setup.cfg  setup.py
ros2/z_manip_task/config/: go2w_sim.yaml  runtime.yaml
ros2/z_manip_task/launch/: mobile_manipulation.launch.py  task_runtime.launch.py
ros2/z_manip_task/test/: conftest.py  test_cancel.py  test_contact_approach.py  test_core.py  test_execution_occlusion_gate.py  test_fixed_fixture_planning.py  test_flake8.py  test_grasp_verification.py  test_object_geometry.py  test_package_contract.py  test_pep257.py  test_perception_authorization.py  test_place_transaction.py  test_post_release_verification.py  test_posture_safety.py  test_pregrasp_replan.py  test_runtime_executor.py  test_runtime_lifecycle_guards.py  test_semantic_observation.py  test_semantic_points.py  test_two_stage_planning.py  test_visual_search_settle.py  test_work_pose_runtime_contract.py
ros2/z_manip_task/z_manip_task/: __init__.py  core.py  grasp_verification.py  node.py  object_geometry.py  place_transaction.py  planning.py  post_release_verification.py
scripts/: benchmark_perception_latency.py  benchmark_vlm.py  clone_deps.sh  run-tests.sh
scripts/offline/: end_to_end_acceptance_summary.py  grounding_seed_benchmark.py  handoff_stage_budget.py  ik_monte_carlo_replay.py  mobile_handoff_benchmark.py  mobile_pipeline_replay_eval.py  perception_bag_benchmark.py  planning_replay_benchmark.py  whole_body_bag_replay.py  whole_body_shadow_replay.py
scripts/runtime/: ffs_depth_filter.py  ffs_depth_relay.py  ffs_depth_stack.sh  ffs_ir_pair_throttle.py  go2w_base_lock.py  go2w_base_lock_publish.py  (+69 more)
tests/: __init__.py  conftest.py  contract.py  helpers.py  test_antipodal_grasp.py  test_benchmark_perception_latency.py  test_component_management.py  test_configuration.py  test_d435_filtered_service.py  test_e2e_smoke.py  test_e2e_staged.py  test_edge_tam_contract.py  test_edgetam_service_client.py  test_edgetam_service_server.py  test_end_to_end_acceptance_summary.py  test_ffs_depth_filter.py  test_filtered_cloud_pipeline_contract.py  test_fixed_self_collision.py  test_foxglove_read_only_config.py  test_go2w_base_lock.py  test_go2w_debug_bundle.py  test_go2w_debug_safety_gate.py  test_go2w_debug_ui.py  test_go2w_depth_servo_runtime.py  test_go2w_live_perception.py  test_go2w_planning_control.py  test_go2w_planning_workbench.py  test_go2w_posture_adapter.py  test_go2w_reactive_control_nuc.py  test_go2w_reactive_supervision.py  test_go2w_runtime_observer.py  test_go2w_visual_servo_base_service.py  test_go2w_wrist_search_runtime.py  test_grasp_face_selection.py  test_grasp_inference_client.py  test_grasp_planning_pipeline.py  test_grasp_symmetry.py  test_grasp_verification.py  test_grounding_seed_benchmark.py  test_handoff_disposition.py  (+73 more)
z_manip/: __init__.py  configuration.py  fixed_self_collision.py  planning_control.py  read_only_sessions.py  trajectory_clearance.py  trajectory_digest.py
(+127 files in other folders)
