<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>z_manip_rgbd_bridge</name>
  <version>0.1.0</version>
  <description>Non-lazy compressed RGB-D decoder for the read-only Go2W perception path.</description>
  <maintainer email="robotics@invalid.local">Z Robotics Lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
